2022-01-15
    * AppStream MetaInfo renamed.

2021-12-16
    * Fixed launchable name in appdata.xml
    * Added downloads in documentation
    * Bumped version for the next development cycle

2021-12-12
    * Release 1.3.0

2021-11-28
    * Czech translation, by Pavel Fric

2021-11-25
    * Qt6 compatibility fixes
    * New build options: USE_QT and BUILD_DOCS
    * Documentation: using Pandoc to create man page and help documents

2021-11-24
    * revised documentation system

2021-09-25
    * desktop icons replaced

2021-04-23
    * added action icons: internal theme based on breeze
    * new settings: qt style, dark mode, and internal icon theme
    * desktop icons replaced

2021-04-01
    * added SCM Revision to the about box

2021-02-03
    * copyright years updated

2020-12-31 00:00 plcl
    * Build system and code modernized
    * Synchronized to Drumstick 2.0.0
    * release 1.2.0

2019-11-05 00:00 plcl

    * Fixed the LCD number component, to use the application palette instead of hardcoded colors. 
      This fix provides better looking and usability with dark and light desktop themes.
    * Updated CMake buildsystem, requires CMake 3.1 or newer
    * Updated documentation.
    * Release 1.0.1

2014-10-12 00:00 plcl

    * Migration to Qt5
    * Release 1.0.0

2012-05-28 00:00 plcl

    * assigned shortcuts for keyboard media keys
    * Release 0.10.1

2011-02-05 00:00 plcl

    * Turkish translation added, by Server Acim

2010-09-16 00:00 plcl

    * docbook version update

2010-09-10 00:00 plcl

    * drumstick: sync release 0.5
    * request realtime priority for the MIDI input thread 

2010-06-06 00:00 plcl

    * Release 0.10.0

2010-06-05 00:00 plcl 

    * German translation updated, by Rene Landert
    * Custom pattern samples
    * release candidate

2010-05-23 00:00 plcl

    * Enable the standard toolbar
    * Optionally hide the fake toolbar
    * Import/export patterns 
    * Updated translation template

2010-05-20 00:00 plcl
