@@ -1,5 +1,8 @@
+2022-01-27
+    * Avoid loading translations for English
+
 2022-01-15
-    * AppStream MetaInfo renamed.
+    * AppStream MetaInfo renamed
 
 2021-12-16
     * Fixed launchable name in appdata.xml
